# page-monitor

./: .gitignore  README.md  api_state.json  monitor.py  pyproject.toml  seen_ids.txt  seen_ids_2.txt
.github/workflows/: page-monitor-2.yml  page-monitor.yml
