[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "page-monitor"
version = "0.1.0"
description = "Automated page monitoring and AI screening pipeline"
requires-python = ">=3.11"
dependencies = [
    "playwright==1.44.0",
    "google-generativeai==0.4.1",
    "requests==2.31.0"
]

# 単一ファイルスクリプトであることを明示（これがないと自動探索でコケる場合があります）
[tool.setuptools]
py-modules = ["monitor"]